# everdb-native

./: .travis.yml  CMakeLists.txt  INSTALL  Makefile  README.md  coverage.sh  test_win32.bat  test_win32_unit.bat
docs/: btree.md  edb.mb  linearhashing.markdown  transactions.md
include/: edb.h  errors.h
lib/: catch.hpp
src/: array.c  array.h  btree.c  btree.h  core.h  edb.c  edb.h  freelist.c  freelist.h  hash.c  hash.h  io.c  io.h  math.h  mem_hash.h  page.c  page.h  txn.c  txn.h  types.h  util.h
src/api/: array.c  edb.c
test/: CMakeLists.txt  benchmark.cpp  test.cpp  test_array.cpp  test_array_api.cpp  test_edb.cpp  test_integration.cpp  test_io.cpp  test_txn.cpp  test_txn_api.cpp  trace.txt
test/unit/: CMakeLists.txt  edb_mock.h  test_btree.cpp  test_io.cpp  test_mem_hash.cpp  test_page.cpp  test_txn.cpp
